JVM Crashes when started with -XX:+DTraceMethodProbes on x86_64

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 8
    • Affects Version/s: 8
    • Component/s: hotspot
    • b114
    • x86_64
    • os_x, solaris_10
    • Not verified

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0xfffffd7ffe9faf94, pid=26216, tid=2
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b111) (build 1.8.0-ea-b111)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b53 mixed mode solaris-amd64 compressed oops)
        # Problematic frame:
        # V [libjvm.so+0xffaf94] Symbol*Method::klass_name()const+0x8
        #
        # Core dump written. Default location: /localhome/java/jdk-8-ea-bin-b111/core or core.26216
        #
        # An error report file with more information is saved as:
        # /localhome/java/jdk-8-ea-bin-b111/hs_err_pid26216.log
        Compiled method (c1) 684 182 ! 3 java.lang.ClassLoader::loadClass (122 bytes)
         total in heap [0xfffffd7fee572150,0xfffffd7fee576770] = 17952
         relocation [0xfffffd7fee572278,0xfffffd7fee572598] = 800
         main code [0xfffffd7fee5725a0,0xfffffd7fee574e20] = 10368
         stub code [0xfffffd7fee574e20,0xfffffd7fee574f98] = 376
         oops [0xfffffd7fee574f98,0xfffffd7fee574fb0] = 24
         metadata [0xfffffd7fee574fb0,0xfffffd7fee575030] = 128
         scopes data [0xfffffd7fee575030,0xfffffd7fee576048] = 4120
         scopes pcs [0xfffffd7fee576048,0xfffffd7fee576418] = 976
         dependencies [0xfffffd7fee576418,0xfffffd7fee576420] = 8
         handler table [0xfffffd7fee576420,0xfffffd7fee576708] = 744
         nul chk table [0xfffffd7fee576708,0xfffffd7fee576770] = 104

        When attempting to run Java2DDemo.jar with -XX:+DTraceMethodProbes.

              Assignee:
              Igor Veresov
              Reporter:
              Henrik Dafgård
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: