8026495: JVM Crashes when started with -XX:+DTraceMethodProbes on Solaris x86_64

Fix wrong calling convention in LIR_Assembler::emit_unwind_handler(), T_METADATA support in calling convention generator, C1 register allocator

Reviewed-by: twisti, jrose